--- a/languages/fr.yml
+++ b/languages/fr.yml
@@ -17,3 +17,22 @@ powered_by: Propulsé by
 rss_feed: Flux RSS
 category: Catégorie
 tag: Mot-clé
+
+post:
+  sticky: Sticky
+  posted: Posté le
+  modified: Updated at
+  in: In
+  read_more: Lire la suite
+  untitled: Non titré
+  toc_empty: This post does not have a Table of Contents
+  visitors: Visitors
+  wordcount: Words count in article
+  min2read: Reading time
+  totalcount: Site words total count
+  copyright:
+    author: Post author
+    link: Post link
+    license_title: Copyright Notice
+    license_content: 'All articles in this blog are licensed under
+      <a href="%s" rel="external nofollow" target="_blank">%s</a> unless stating additionally.'
