--- a/languages/nl.yml
+++ b/languages/nl.yml
@@ -18,3 +18,24 @@ powered_by: Powered by
 rss_feed: RSS Feed
 category: Categorie
 tag: Label
+
+post:
+  created: Post aangemaakt
+  modified: Post aangepast
+  sticky: Sticky
+  posted: Geplaatst op
+  in: In
+  more: meer
+  read_more: Lees meer
+  untitled: Naamloos
+  toc_empty: Deze post heeft geen inhoudsopgave
+  visitors: Bezoekers
+  wordcount: Aantal woorden in artikel
+  min2read: Leestijd
+  totalcount: Aantal woorden in site
+  copyright:
+    author: Post auteur
+    link: Post link
+    license_title: Copyright melding
+    license_content: 'Alle artikelen op deze blog zijn gelicenseerd onder
+      <a href="%s" rel="external nofollow" target="_blank">%s</a>, mits niet anders aangegeven.'
