--- a/languages/ru.yml
+++ b/languages/ru.yml
@@ -17,3 +17,24 @@ powered_by: Создано с помощью
 rss_feed: RSS-каналы
 category: Категория
 tag: Метка
+
+post:
+  created: Дата создания записи
+  modified: Дата обновления записи
+  sticky: Ссылка
+  posted: Размещено
+  in: в категории
+  more: далее
+  read_more: Читать полностью
+  untitled: Без имени
+  toc_empty: Эта запись без оглавления
+  visitors: Просмотров
+  wordcount: Кол-во слов в статье
+  min2read: Время чтения в минутах
+  totalcount: Общее кол-во слов в записях
+  copyright:
+    author: Автор записи
+    link: Ссылка на запись
+    license_title: Информация об авторских правах
+    license_content: 'Все записи на этом сайте защищены лицензией
+      <a href="%s" rel="external nofollow" target="_blank">%s</a> если не указано дополнительно.'
