--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -17,3 +17,23 @@ powered_by: Powered by
 rss_feed: RSS Feed
 category: Category
 tag: Tag
+
+post:
+  created: 创建于
+  modified: 更新于
+  sticky: 置顶
+  posted: 发表于
+  in: 分类于
+  read_more: 阅读全文
+  untitled: 未命名
+  toc_empty: 此文章未包含目录
+  visitors: 阅读次数
+  wordcount: 字数统计
+  min2read: 阅读时长
+  totalcount: 网站字数总计
+  copyright:
+    author: 本文作者
+    link: 本文链接
+    license_title: 版权声明
+    license_content: '本博客所有文章除特别声明外，均采用
+      <a href="%s" rel="external nofollow" target="_blank">%s</a> 许可协议。<b>转载请注明出处</b>！'
