--- a/languages/zh-tw.yml
+++ b/languages/zh-tw.yml
@@ -17,3 +17,23 @@ powered_by: Powered by
 rss_feed: RSS Feed
 category: Category
 tag: Tag
+
+post:
+  created: 創建於
+  modified: 更新於
+  sticky: 置頂
+  posted: 發表於
+  in: 分類於
+  read_more: 閱讀全文
+  untitled: 未命名
+  toc_empty: 此文章未包含目錄
+  visitors: 閱讀次數
+  wordcount: 字數統計
+  min2read: 閱讀時長
+  totalcount: Site words total count
+  copyright:
+    author: Post author
+    link: Post link
+    license_title: Copyright Notice
+    license_content: 'All articles in this blog are licensed under
+      <a href="%s" rel="external nofollow" target="_blank">%s</a> unless stating additionally.'
